chore: Code cleanup and correctness
- Reintroduce strict mode
- Fix impure functions highlighted by strict mode
- Push Mobile filters usage in shop area div, for structural clarity
- Remove wiggle from mobile add to cart btn, too much movement on screen

--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -556,10 +556,6 @@ div[role=button], button {
 	background: forestgreen;
 }
 
-.feather-shopping-cart.clicked{
-	animation: wiggle .5s linear;
-}
-
 .Micro-cart-btn { 
 	color: white;
 	padding: 10px;
